// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all apis markup string 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": true,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "dataType": "string",
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": true,
    "initialValue": "123",
    "initialized": true,
    "inputed": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "key": "aa",
      "name": "aa",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visibleCacheValue": undefined,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis markup virtualbox 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": true,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "NO_NAME_FIELD_$0": Object {
    "display": true,
    "displayName": "VirtualFieldState",
    "initialized": true,
    "mounted": true,
    "name": "NO_NAME_FIELD_$0",
    "path": "NO_NAME_FIELD_$0",
    "props": Object {
      "display": undefined,
      "key": "NO_NAME_FIELD_$0",
      "name": "NO_NAME_FIELD_$0",
      "type": "object",
      "visible": undefined,
      "x-component": "card",
      "x-component-props": Object {
        "title": "this is card",
      },
    },
    "unmounted": false,
    "visible": true,
  },
  "NO_NAME_FIELD_$0.aa": Object {
    "active": false,
    "dataType": "string",
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": true,
    "initialValue": "123",
    "initialized": true,
    "inputed": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "NO_NAME_FIELD_$0.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "key": "aa",
      "name": "aa",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visibleCacheValue": undefined,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis markup virtualbox 2`] = `
Object {
  "properties": Object {
    "NO_NAME_FIELD_$0": Object {
      "display": undefined,
      "key": "NO_NAME_FIELD_$0",
      "name": "NO_NAME_FIELD_$0",
      "properties": Object {
        "aa": Object {
          "default": "123",
          "key": "aa",
          "name": "aa",
          "type": "string",
          "x-props": Object {
            "data-testid": "input",
          },
        },
      },
      "type": "object",
      "visible": undefined,
      "x-component": "card",
      "x-component-props": Object {
        "title": "this is card",
      },
    },
  },
  "type": "object",
}
`;
